add:tsconfig.jsonに設定を追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "strict": true,
+  },
+  "exclude": [
+    "node_module"
+  ],
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json"
 }
