--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-vue": "^9.1.1",
     "nuxt": "3.0.0-rc.3"
   }
 }
