--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
