--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
     "extends": [
       "plugin:vue/vue3-recommended",
       "eslint:recommended",
-      "@vue/typescript/recommended"
+      "@vue/typescript/recommended",
+      "@vue/prettier",
+      "@vue/prettier/@typescript-eslint"
     ],
     "parserOptions": {
         "ecmaVersion": 2021
