--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -17,5 +17,9 @@
     "eslint-plugin-vue": "^9.1.1",
     "nuxt": "3.0.0-rc.3",
     "prettier": "^2.7.1"
+  },
+  "lint-staged": {
+    "*.{ts,vue}": "eslint --fix",
+    "*": "prettier -w -u"
   }
 }
