--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
