--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.1.1",
     "nuxt": "3.0.0-rc.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-standard": "^26.0.0"
   },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
