--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -23,6 +24,7 @@
   },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
+    "*.{css,scss,vue}": "stylelint --fix",
     "*": "prettier -w -u"
   }
 }
