--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^8.18.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.1.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
     "nuxt": "3.0.0-rc.3",
     "prettier": "^2.7.1",
     "stylelint": "^14.9.1",
